navigation issue fixed, attempting additional stretch goals

--- a/css/index.css
+++ b/css/index.css
@@ -160,3 +160,196 @@ p {
   width: 100%;
   margin: 0 auto;
 }
+nav {
+  background: #F6F6F6;
+  width: 100%;
+  border-bottom: 1px solid #F1F1F1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+nav div {
+  padding-bottom: 10px;
+}
+@media (max-width: 500px) {
+  nav div {
+    max-width: 500px;
+  }
+}
+nav div h1 {
+  font-size: 4rem;
+  padding: 10px 0;
+  text-align: center;
+}
+nav div a {
+  text-decoration: none;
+  color: #454A59;
+  font-size: 1.6rem;
+  font-weight: bolder;
+  padding: 0 15px;
+}
+footer {
+  color: #22283B;
+  background: #f4f4f4;
+  padding: 20px 0;
+  border: 1px double #e0e0e0;
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 3px;
+}
+footer p {
+  animation-duration: 5s;
+  animation-name: slidein;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+}
+@keyframes slidein {
+  from {
+    margin-left: 60%;
+    width: 100%;
+  }
+  to {
+    margin-left: 10%;
+    width: 100%;
+  }
+}
+.home .intro h2 {
+  padding: 15px;
+}
+.home .intro p {
+  padding: 0 15px;
+}
+.home .intro img {
+  width: 99%;
+  border-radius: 5px;
+  margin: 0 0.5%;
+}
+@media (max-width: 500px) {
+  .home .intro img {
+    width: 100%;
+    margin: 0;
+  }
+}
+.home .space-images {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+}
+.home .space-images img {
+  width: 28%;
+  margin: 20px 2.5%;
+  border-radius: 20px;
+  height: 100%;
+}
+@media (max-width: 500px) {
+  .home .space-images img {
+    width: 92%;
+    margin: 20px auto;
+  }
+}
+@media (max-width: 500px) {
+  .home .space-images .sky,
+  .home .space-images .launch {
+    display: none;
+  }
+}
+.home .visit-planets {
+  padding: 15px;
+}
+.home .visit-planets h3 {
+  margin-top: 11px;
+}
+.home .visit-planets p {
+  margin-top: 13px;
+}
+@media (max-width: 500px) {
+  .home .visit-planets p {
+    margin-bottom: 20px;
+  }
+}
+.home .walk {
+  margin-top: 60px;
+  border-top: 1px solid #dee2e6;
+  padding: 50px 60px;
+  display: flex;
+  justify-content: center;
+}
+@media (max-width: 500px) {
+  .home .walk {
+    flex-direction: column-reverse;
+    margin: 0;
+    padding: 20px 10px;
+  }
+}
+.home .walk .walk-text {
+  width: 50%;
+}
+@media (max-width: 500px) {
+  .home .walk .walk-text {
+    width: 95%;
+    padding-top: 20px;
+    margin: 0 2.5%;
+  }
+}
+.home .walk .walk-text h3 {
+  margin-bottom: 10px;
+}
+.home .walk .walk-text p {
+  margin-bottom: 26px;
+}
+.home .walk .walk-text .btn {
+  background: #22283A;
+  color: #F6F7F8;
+  width: 100px;
+  font-size: 1.8rem;
+  font-weight: bolder;
+  border-radius: 5px;
+  padding: 10px;
+  text-align: center;
+}
+.home .walk .walk-text .btn:hover {
+  background: #F6F7F8;
+  color: #22283A;
+  width: 100px;
+  font-size: 1.8rem;
+  font-weight: bolder;
+  border-radius: 5px;
+  padding: 10px;
+  text-align: center;
+}
+@media (max-width: 500px) {
+  .home .walk .walk-text .btn {
+    width: 100%;
+    padding: 25px;
+  }
+  .home .walk .walk-text .btn:hover {
+    background: #F6F7F8;
+    color: #22283A;
+    width: 100%;
+    font-size: 1.8rem;
+    font-weight: bolder;
+    border-radius: 5px;
+    padding: 10px;
+    text-align: center;
+    padding: 25px;
+  }
+}
+.home .walk .walk-img {
+  width: 46%;
+  margin-left: 4%;
+}
+@media (max-width: 500px) {
+  .home .walk .walk-img {
+    width: 100%;
+    margin: 0;
+  }
+}
+.home .walk .walk-img img {
+  width: 95%;
+  height: auto;
+  margin: 0 2.5%;
+  border-radius: 10px;
+}
