--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,20 @@
+
 // Mixins Here
+
+.flexbase(@fd, @jc, @ai) {
+    display: flex;
+    flex-direction: @fd;
+    justify-content: @jc;
+    align-items: @ai;
+}
+
+.button(@bgc, @ftc, @wth){
+    background: @bgc;
+    color: @ftc;
+    width: @wth;
+    font-size: 1.8rem;
+    font-weight: bolder;
+    border-radius: 5px;
+    padding:10px;
+    text-align:center;   
+}
